--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div class="header">
@@ -14,21 +15,67 @@
             </div>
         </div>
         <div class="right">
-            <div class="links">
-                <ul>
-                    <li><a href="google.com">header link one</a></li>
-                    <li><a href="google.com">header link two</a></li>
-                    <li><a href="google.com">header link three</a></li>
-                </ul>
-            </div>
+            <ul class="links">
+                <li><a href="google.com">header link one</a></li>
+                <li><a href="google.com">header link two</a></li>
+                <li><a href="google.com">header link three</a></li>
+            </ul>
         </div>
     </div>
     <div class="hero">
-        <h1>This website is awesome</h1>
-            <p>This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast</p>
-        <div class="image">
-            <img src="images/thumbsup.jpeg">
+        <div class="hero-left">
+            <h1>This website is awesome</h1>
+                <p>This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast</p>
+            <button class="button">Sign up</button>
         </div>
+        <div class="image">
+            <img src="images/chungus.jpg" alt="Image of smiley face giving a thumbs up">
+        </div>
+    </div>
+    <div class="info">
+        <h2>Some random information</h2>
+        <div class="container">
+            <div class="detail">
+                <div class="icon"></div>
+                <div class="text">This is some subtext under an illustration or image</div>
+            </div>
+            <div class="detail">
+                <div class="icon"></div>
+                <div class="text">This is some subtext under an illustration or image</div>
+            </div>
+            <div class="detail">
+                <div class="icon"></div>
+                <div class="text">This is some subtext under an illustration or image</div>
+            </div>
+            <div class="detail">
+                <div class="icon"></div>
+                <div class="text">This is some subtext under an illustration or image</div>
+            </div>
+        </div>
+    </div>
+    <div class="quote-block">
+        <div class="quote-container">
+        <div class="quote">
+            This is an inspirring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people actually read it. Who knows? All I know is that it looks nice.
+        </div>
+        <div class="attribution">
+            -Thor, God of Thunder
+        </div>
+        </div>
+    </div>
+    <div class="call-to-action">
+        <div class="cta-container">
+            <div class="cta-left">
+                <h3>Call to action! It's time!</h3>
+                    <p>Sign up for our product by clicking that button right over there</p>
+            </div>
+            <div class="cta-right">
+            <button class="button">Sign up</button>
+            </div>
+        </div>
+    </div>
+    <div class="footer">
+        <div class="copyright">Copyright © The Odin Project 2021</div>
     </div>
 </body>
 </html>
